// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callout component renders a message 1`] = `
<div
  className="callout callout"
>
  <h1
    className="callout-title title"
  />
  <h5
    className="callout-message message"
  >
    This is a message
  </h5>
  <div
    className="callout-buttons buttonContainer"
  >
    <div
      className="callout-button button"
    />
  </div>
</div>
`;

exports[`callout component renders a title 1`] = `
<div
  className="callout callout"
>
  <h1
    className="callout-title title"
  >
    This is a title
  </h1>
  <h5
    className="callout-message message"
  />
  <div
    className="callout-buttons buttonContainer"
  >
    <div
      className="callout-button button"
    />
  </div>
</div>
`;

exports[`callout component renders one button 1`] = `
<div
  className="callout callout"
>
  <h1
    className="callout-title title"
  />
  <h5
    className="callout-message message"
  />
  <div
    className="callout-buttons buttonContainer"
  >
    <div
      className="callout-button button"
    >
      <button
        className="primary responsive spacing"
      >
        Single Button
      </button>
    </div>
  </div>
</div>
`;

exports[`callout component renders two buttons 1`] = `
<div
  className="callout callout"
>
  <h1
    className="callout-title title"
  />
  <h5
    className="callout-message message"
  />
  <div
    className="callout-buttons buttonContainer"
  >
    <div
      className="callout-button button"
    >
      <button
        className="primary responsive spacing"
      >
        First Button
      </button>
      <button
        className="primary responsive spacing"
      >
        Second Button
      </button>
    </div>
  </div>
</div>
`;
